--- a/fluentsnackbar-sample/build.gradle
+++ b/fluentsnackbar-sample/build.gradle
@@ -21,7 +21,7 @@ android {
 
 dependencies {
     compile 'com.android.support:appcompat-v7:23.2.1'
-    compile project(":snackbarmanager")
+    compile project(':fluentsnackbar')
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
